// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find reset points correctly 1`] = `
Array [
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`hourly interpolate correctly 1`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 2,
  "low": 2,
  "open": 2,
  "period": 60,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528246800000,
  "volume": 0,
}
`;

exports[`hourly interpolate correctly 2`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 2,
  "low": 2,
  "open": 2,
  "period": 60,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528250400000,
  "volume": 0,
}
`;

exports[`hourly interpolate correctly 3`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 3,
  "low": 0,
  "open": 1,
  "period": 60,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528243200000,
  "volume": 246,
}
`;

exports[`merge reset correctly 1`] = `
Array [
  Object {
    "blockNumber": 111,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 1000,
    "transactionHash": "aaa",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 2,
    "price": 123,
    "timestamp": 2000,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 0.25,
    "price": 123,
    "timestamp": 3000,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1.1,
    "navB": 1,
    "price": 123,
    "timestamp": 4000,
    "transactionHash": "ddd",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`merge total supply correctly 1`] = `
Array [
  Object {
    "blockNumber": 111,
    "timestamp": 1234567890,
    "tokenA": 123,
    "tokenB": 456,
    "transactionHash": "abc",
  },
  Object {
    "blockNumber": 0,
    "timestamp": 2345678901,
    "tokenA": 1234,
    "tokenB": 2345,
    "transactionHash": "",
  },
]
`;

exports[`minutely interpolate correctly 1`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 2,
  "low": 2,
  "open": 2,
  "period": 1,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528243260000,
  "volume": 0,
}
`;

exports[`minutely interpolate correctly 2`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 2,
  "low": 2,
  "open": 2,
  "period": 1,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528243320000,
  "volume": 0,
}
`;

exports[`minutely interpolate correctly 3`] = `
Object {
  "base": "base",
  "close": 2,
  "high": 3,
  "low": 0,
  "open": 1,
  "period": 1,
  "quote": "quote",
  "source": "source",
  "timestamp": 1528243200000,
  "volume": 246,
}
`;
